--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,30 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# If mapping issue add this
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# Mail service
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username =${email} 
+spring.mail.password =${password} 
+ 
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.socketFactory.port = 587
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = admin 
+#${username}
+spring.rabbitmq.password = admin
+#${password}
+	
+fundoo.rabbitmq.exchange = RabbitExchangeBL
+fundoo.rabbitmq.routingkey = RabbitRoutingKeyBL
